fix(generic-toc): add missing margin-left

--- a/components/generic-toc/server.css
+++ b/components/generic-toc/server.css
@@ -28,6 +28,7 @@
     display: inline-block;
 
     padding: 0.25em 0.5em;
+    margin-left: 2px;
 
     color: inherit;
 
